# t3-cute

./: .cursorrules  .env.example  biome.jsonc  bun.lockb  package-lock.json  package.json
fastapi/: main.py  pyproject.toml  start-server.sh
src/app/: layout.tsx  metadata.ts  page.tsx  root-layout.tsx
src/app/english-syntax-highlighting/: page.tsx
src/app/english-syntax-highlighting/demo/: page.tsx
src/app/features/: page.tsx
src/app/features/analytics/: page.tsx
src/app/features/overview/: page.tsx
src/app/features/reports/: page.tsx
src/app/settings/: page.tsx
src/app/settings/preferences/: page.tsx
src/app/settings/profile/: page.tsx
src/app/settings/security/: page.tsx
src/components/: app-sidebar.tsx  calendar-view.tsx  chat-interface.tsx  mode-toggle.tsx  music-player.tsx  semantic-highlighter.tsx  weather-card.tsx
src/components/ui/: following-pointer.tsx  sidebar.tsx
src/config/: navigation.ts
src/hooks/: use-store.ts
src/store/: bearSlice.ts  fishSlice.ts  syntax-highlighter-slice.ts
